# aries

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  FIXES.md  GEMINI.md  PHASE2_SPEC.md  PHASE2_TEST_REPORT.md  README.md  ROADMAP.md  USER_GUIDE.md  aries.ps1  aries.sh  config.example.yaml  config.yaml  package-lock.json  package.json  pyproject.toml  test_phase2_structure.py  test_rag.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
.venv312/: pyvenv.cfg
.venv312/Scripts/: activate  activate.bat
aries/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
aries.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aries/commands/: __init__.py  artifacts.py  base.py  clear.py  desktop.py  exit.py  help.py  last.py  model.py  policy.py  profile.py  rag.py  run.py  search.py  workspace.py
aries/core/: __init__.py  agent_run.py  cancellation.py  conversation.py  desktop_ops.py  desktop_recipes.py  desktop_summary.py  file_edit.py  message.py  ollama_client.py  plan_parser.py  profile.py  run_manager.py  smoke.py  tokenizer.py  tool_policy.py  tool_registry.py  tool_tier.py  workspace.py
aries/providers/: __init__.py  builtin.py  desktop_commander.py  mcp.py
aries/rag/: __init__.py  chunker.py  indexer.py  retriever.py
aries/tools/: __init__.py  base.py  builtin_filesystem.py  builtin_shell.py  builtin_web.py  filesystem.py  image.py  shell.py  (+1 more)
docs/: Builtin_Tools_Runtime_Design.md  phase-a-operator-console.md  playwright_mcp_transport.md
prompts/: default.md
test_docs/: ai_overview.md  notes.txt  python_basics.md
tests/: conftest.py  test_agent_run.py  test_artifacts.py  test_builtin_fs.py  test_builtin_shell.py  test_builtin_web.py  test_chunker.py  test_cli_entry.py  test_config.py  test_conversation.py  test_desktop_manual_plan.py  test_desktop_nudge.py  test_desktop_ops.py  test_desktop_ops_golden.py  test_desktop_plan.py  test_desktop_recipes.py  test_file_edit.py  test_governance_invariants.py  test_integration_phase2.py  test_mcp_command_client.py  test_mcp_provider.py  test_model_command.py  test_ollama_client.py  test_phase_a.py  test_playwright_mcp.py  test_policy_cache.py  test_policy_command.py  test_policy_matrix.py  test_profile_command.py  test_rag.py  test_response_robustness.py  test_smoke.py  test_streaming_condense.py  test_summary_formats.py  test_tokenizer.py  test_tool_invocation.py  test_tool_policy.py  test_tool_registry.py  test_tool_validation.py  test_tools.py  (+1 more)
(+12 files in other folders)
